# myCopilot

./: CMakeLists.txt
.github/workflows/: cmake-single-platform.yml  msbuild.yml  msbuild2.yml
